Fix downloadattachment overlapping with messagebody in ticket history (closes: #13316).
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@18916 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/ticket.css
+++ b/share/html/NoAuth/css/web2/ticket.css
@@ -126,6 +126,8 @@ div#ticket-history div.content {
  border-top: 1px solid #ccc;
  overflow: auto;
  min-height: 2.5em;
+ /* To avoid overlapping of "downloadattachment" by messagebody */
+ clear: left;
 }
 
 .ticket-transaction .messagebody img {
